--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,25 +8,22 @@ on:
 
 jobs:
 
-  tags:
-      runs-on: ubuntu-latest
-
-      steps:
-        - name: Set image tag (date + build number)
-          id: vars
-          run: |
-            DATE_TAG=$(date +'%Y%m%d')
-            # Find the number of builds for today; GITHUB_RUN_NUMBER is unique per workflow, but you may want continuity across the repo
-            BUILD_NUMBER=$( (git tag --list "${DATE_TAG}-*" | wc -l) || echo "0" )
-            BUILD_NUMBER=$((BUILD_NUMBER + 1))
-            VERSION_TAG="${DATE_TAG}-${BUILD_NUMBER}"
-            echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
-            echo "::set-output name=version::$VERSION_TAG"
-
   build:
     runs-on: ubuntu-latest
 
     steps:
+
+    - name: Set version tag
+      id: vars
+      run: |
+        DATE_TAG=$(date +'%Y%m%d')
+        # Find the number of builds for today; GITHUB_RUN_NUMBER is unique per workflow, but you may want continuity across the repo
+        BUILD_NUMBER=$( (git tag --list "${DATE_TAG}-*" | wc -l) || echo "0" )
+        BUILD_NUMBER=$((BUILD_NUMBER + 1))
+        VERSION_TAG="${DATE_TAG}-${BUILD_NUMBER}"
+        echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
+        echo "::set-output name=version::$VERSION_TAG"
+    
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -46,5 +43,5 @@ jobs:
         context: .
         push: true
         tags: |
-          ghcr.io/${{ github.repository }}:${{ env.VERSION_TAG }}
+          ghcr.io/${{ github.repository }}:${{ steps.vars.outputs.version }}
           ghcr.io/${{ github.repository }}:latest
