--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,6 +30,9 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Set up QEMU (required for emulation)
+      uses: docker/setup-qemu-action@v3
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
@@ -42,6 +45,7 @@ jobs:
       with:
         context: .
         push: true
+        platforms: linux/amd64,linux/arm64
         tags: |
           ghcr.io/${{ github.repository }}:latest
           ghcr.io/${{ github.repository }}:${{ steps.vars.outputs.version }}
